# docs/swagger.yaml
@@ -28,6 +28,34 @@ definitions:
       name:
         type: string
     type: object
+  entity.News:
+    properties:
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      title:
+        type: string
+    type: object
+  entity.NewsCreateRequest:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
+  entity.NewsUpdateRequest:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    type: object
   entity.Photo:
     properties:
       id:
@@ -420,6 +448,114 @@ paths:
       summary: Admin login
       tags:
       - auth
+  /admin/news:
+    post:
+      consumes:
+      - application/json
+      description: Create news
+      operationId: create-news
+      parameters:
+      - description: News data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/entity.NewsCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - BearerAuth: []
+      summary: Create news
+      tags:
+      - admin
+  /admin/news/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete news
+      operationId: delete-news
+      parameters:
+      - description: News ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - BearerAuth: []
+      summary: Delete news
+      tags:
+      - admin
+    patch:
+      consumes:
+      - application/json
+      description: Update news
+      operationId: update-news
+      parameters:
+      - description: News ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: News data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/entity.NewsUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - BearerAuth: []
+      summary: Update news
+      tags:
+      - admin
   /admin/pictures:
     post:
       consumes:
@@ -797,6 +933,62 @@ paths:
       summary: Check server healthz
       tags:
       - common
+  /news:
+    get:
+      consumes:
+      - application/json
+      description: Get all news
+      operationId: get-news
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.News'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get news
+      tags:
+      - news
+  /news/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get news by ID
+      operationId: get-news-by-id
+      parameters:
+      - description: News ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.News'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get news by ID
+      tags:
+      - news
   /pictures:
     get:
       consumes:
